Initial LLVM pass code: masks indirect memory writes

--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,13 @@
 *.out
 *.app
 
-$ Mac Finder DB Files
+# Mac Finder DB Files
 .DS_Store
+
+# Build directory & CMake Files
+build/
+CMakeFiles/
+CMakeCache.txt
+Makefile
+*.cmake
+lib/
